https://github.com/fp024/spring-5-recipes-study/issues/1 관련 문제 커밋외...
Gradle Wrapper 7.5 업데이트
- https://docs.gradle.org/7.5/release-notes.html

업데이트 이후 테스트 실패 문제 수정